5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1836_1273.log
== TEST (2019-06-25 11:19:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat= array([[1,1,0,0],[0,1,1,0],[0,0,1,,0],[1,0,0,1]])
qtd = array([50,-120,350,870])
r = dot(inv(mat),qtd.T)
print(r)
-- ERROR:
File "XXXX", line 3
    mat= array([[1,1,0,0],[0,1,1,0],[0,0,1,,0],[1,0,0,1]])
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:21:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,,0],[1,0,0,1]])
qtd = array([50,-120,350,870])
r = dot(inv(mat),qtd.T)
print(r)
-- ERROR:
File "XXXX", line 3
    mat = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,,0],[1,0,0,1]])
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:21:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
qtd = array([50,-120,350,870])
r = dot(inv(mat),qtd.T)
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:21:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([[1,-1,0,0],[0,1,-1,0],[0,0,1,0],[1,0,0,1]])
qtd = array([50,-120,350,870])
r = dot(inv(mat),qtd.T)
print(r)
-- EXECUTION TIME:
1.0412
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
